Optimizations to next level